// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnnotatedWord renders correctly with high arousal 1`] = `
<div>
  <span
    class="word arousal2 valence0"
  >
    test
  </span>
</div>
`;

exports[`AnnotatedWord renders correctly with line end word 1`] = `
<div>
  <div
    class="line-break"
  >
    

  </div>
</div>
`;

exports[`AnnotatedWord renders correctly with negative valence 1`] = `
<div>
  <span
    class="word arousal0 valence-2"
    title="Tästä sanasta tunnistettiin vahvoja tunteita."
  >
    test
  </span>
</div>
`;

exports[`AnnotatedWord renders correctly with neutral rating 1`] = `
<div>
  <span
    class="word arousal0 valence0"
  >
    test
  </span>
</div>
`;

exports[`AnnotatedWord renders correctly with non-neutral rating without annotations 1`] = `
<div>
  <span
    class="word arousal0 valence0"
  >
    test
  </span>
</div>
`;

exports[`AnnotatedWord renders correctly with positive valence 1`] = `
<div>
  <span
    class="word arousal0 valence2"
    title="Tästä sanasta tunnistettiin vahvoja tunteita."
  >
    test
  </span>
</div>
`;

exports[`AnnotatedWord renders correctly with punctuation word 1`] = `
<div>
  <span
    class="punctuation"
  >
    ,
  </span>
</div>
`;

exports[`AnnotatedWord renders correctly with unknown word 1`] = `<div />`;

exports[`AnnotatedWord renders correctly with whitespace word 1`] = `
<div>
  <span
    class="whitespace"
  >
     
  </span>
</div>
`;
